fix ArrowDown behind CookieNotice

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -74,7 +74,7 @@
     bottom: 0;
     right: 0;
 
-    margin: 3em;
+    margin: 5em;
 
     .icon {
       -webkit-transform: rotate(90deg);
